fix: adjustments in weather core and prometheus